[package]
name = "smooth_divor"
version = "0.1.0"
edition = "2021"
description = "A pure rust implementation of the RPM package format"
readme = "README.md"
license = "GPL-2.0-or-later OR LGPL-2.0-or-later"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["derive", "default"]}
binrw = {version = "0"}
enum-display = {version = "0"}
